<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">AncillaryScreens</string>
    <string name="about_us">About Us</string>
    <string name="base_url_assessment_module" translatable="false" tools:ignore="MissingTranslation">http://139.59.55.86/api/v1/</string>
    <string name="both_cannot_change_at_same_time">Both Phone number and email cannot change at the same time. Please try with one first.</string>
    <string name="btn_backspace">Back</string>
    <string name="btn_clear">Clear</string>
    <string name="category">Category</string>
    <string name="confirm_password">Confirm Password</string>
...
    <string name="let_s_start_again" tools:ignore="MissingTranslation">CLOSE APP</string>
    <string name="log_in">LOG IN</string>
    <string name="logging_in">Logging you in</string>
    <string name="updating_details">Updating Details</string>
    <string name="login">Login</string>
    <string name="login_failed_error">Username or Password didn\'t match. Please try again</string>
    <string name="logout">Logout</string>
    <string name="update_failed">User details failed to update.</string>
    <string name="mulitple_users_same_email_found" tools:ignore="MissingTranslation">Multiple users with the same email found. Please ensure that your email is not used by any other account or Contact Admin.</string>
    <string name="mulitple_users_same_phone_found">Multiple users with the same phone number found. Please check that you have not registered your entered contact number for any other username on Saksham Samiksha or Contact Admin.</string>
    <string name="next">NEXT</string>
    <string name="no_internet_saving_complete" translatable="false">Thank you for filling the inspection report for. Since you have filled the report in offline mode, please manually submit the form when connected to the internet from the "Submit form" option</string>
    <string name="no_users_found">No Users Found.</string>
...
    <string name="phone_number_email_not_simultaneous">Both Phone number and email cannot change at the same time. Please try with one first.</string>
    <string name="phone_number_not_unique">Phone number is not unique</string>
    <string name="please_enter_the_otp">Please enter the OTP sent to the associated mobile number.</string>
    <string name="please_enter_the_otp_sent_to_the_mobile_number_of_school_incharge" tools:ignore="MissingTranslation">Please enter the OTP sent to the associated mobile number.</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="proceed">PROCEED AHEAD</string>
    <string name="profile">Profile</string>
    <string name="profile_contact_message" translatable="false">These following fields cannot be updated. In case there is any issue, contact admin.</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resend_otp_password">Resend OTP</string>
    <string name="resend_otp_profile">Resend OTP</string>
    <string name="reset_here">Reset here</string>
    <string name="reset_password">Reset Password</string>
...

    <string name="submit">SUBMIT</string>
    <string name="successful_logout_message">You have successfully logged out.</string>
    <string name="successful_update">User Details successfully updated.</string>
    <string name="these_following_fields_cannot_be_updated_in_case_there_is_any_issue_contact_admin_edudata_hp_gmail_com">These following fields cannot be updated. In case there is any issue, contact admin.</string>
    <string name="time_taken_in_seconds">Time taken (in seconds)</string>
    <string name="tutorial">Tutorial Videos</string>
    <string name="udise">UDISE</string>
    <string name="unable_to_log_out">Unable to log out, Please try again.</string>
    <string name="unable_to_send_OTP">OTP could not be sent.</string>
    <string name="unexpected_error_occured" tools:ignore="MissingTranslation">Something unexpected has occurred.</string>
    <string name="update">UPDATE</string>
    <string name="update_cancel_1">To update the language on the app, select the language and click on Update.\nPlease restart the phone to update the language.</string>
    <string name="update_failed_due_to_internet" tools:ignore="MissingTranslation">User details failed to update. Please check your internet!</string>
    <string name="updating_user_profile">Updating your profile.... </string>
    <string name="user_name_empty_error">Username cannot be empty</string>
    <string name="user_name_not_apt_length_error">Username has to be more than characters</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="view_issues" translatable="false">View Dashboard</string>
    <string name="welcome_heading_login_screen">Welcome Back!</string>
    <string name="try_otp_for_no_phone">Please check if you have mobile number registered in your profile and if you are entering a valid number, if registered.</string>
    <string name="change_details">CHANGE DETAILS</string>
    <string name="unable_to_change_school">Unable to update the school info.</string>
    <string name="school_changed">School Details have been updated successfully.</string>
    <string name="school_code">School Code : %s</string>
...
