...
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/login_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="Username"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:nextFocusLeft="@+id/login_password"
                        android:nextFocusRight="@+id/login_password"
                        android:nextFocusUp="@+id/login_password"
                        android:nextFocusDown="@+id/login_password"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp" />

...
                        android:paddingRight="16dp" />

                </LinearLayout>


                <Button
                    android:id="@+id/login_submit"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:text="Submit"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/helpline_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="150dp"
...
