<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".profile.ProfileActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="218dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="228dp"
            android:background="@color/light_grey"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/green_500"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:adjustViewBounds="true"
                android:background="@android:color/white"
                android:padding="10dp"
                android:src="@drawable/saksham_haryana"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:popupTheme="@style/AppTheme.ToolBarOverlay" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/content_layout"
        layout="@layout/dynamic_scroll_layout"
        android:visibility="visible" />
    <!--
        <include
            android:id="@+id/view_layout"
            layout="@layout/content_scrolling"
            android:visibility="visible"
            app:layout_anchor="@+id/edit_layout"
            app:layout_anchorGravity="center" />

        <include
            android:id="@+id/edit_layout"
            layout="@layout/profile_content_edit"
            android:visibility="invisible"
            app:layout_anchor="@id/view_layout"
            app:layout_anchorGravity="center" />-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:backgroundTint="@color/colorPrimary"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|right"
        android:stateListAnimator="@null"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="18dp"
        app:srcCompat="@drawable/ic_edit_icon_color_24dp"
        tools:targetApi="lollipop" />


    <Button
        android:id="@+id/fab_edit_password"
        android:layout_width="160dp"
        android:layout_height="64dp"
        android:layout_gravity="start|end"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:stateListAnimator="@null"
        android:textSize="15sp"
        android:layout_marginEnd="12dp"
        app:backgroundTint="@color/colorPrimary"
        app:layout_anchor="@id/fab"
        app:layout_anchorGravity="bottom"
        tools:targetApi="lollipop" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>