...
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/vertical_divider">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:inputType="phone"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
...
